testfiles/escDemo/expected
..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:14: error: An identifier with protected visibility may not be used in a ensures clause with public visibility
 //@ ensures hour == 12 && minute == 0 && second == 0;
             ^
..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:14: error: An identifier with protected visibility may not be used in a ensures clause with public visibility
 //@ ensures hour == 12 && minute == 0 && second == 0;
                           ^
..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:14: error: An identifier with protected visibility may not be used in a ensures clause with public visibility
 //@ ensures hour == 12 && minute == 0 && second == 0;
                                          ^
..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:34: error: An identifier with protected visibility may not be used in a assignable clause with public visibility
 @ assignable hour, minute, second; // NB for expository purposes only
              ^
..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:34: error: An identifier with protected visibility may not be used in a assignable clause with public visibility
 @ assignable hour, minute, second; // NB for expository purposes only
                    ^
..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:34: error: An identifier with protected visibility may not be used in a assignable clause with public visibility
 @ assignable hour, minute, second; // NB for expository purposes only
                            ^
6 errors
